--- a/index.htm
+++ b/index.htm
@@ -20,5 +20,39 @@
     <li><a href="#"><img src="img/icon-feed.png" alt="RSS feed" /></a></li>
     <li><a href="#"><img src="img/icon-bitman.png" alt="BitMan" /></a></li>
   </ul>
+
+  <ul class="gallery">
+    <li><a href="#"><img src="photo-1.jpg" /></a></li>
+    <li><a href="#"><img src="photo-2.jpg" /></a></li>
+    <li><a href="#"><img src="photo-3.jpg" /></a></li>
+  </ul>
+
+  <ul class="gallery2">
+    <li><a href="#"><img src="photo-1.jpg" /></a></li>
+    <li><a href="#"><img src="photo-2.jpg" /></a></li>
+    <li><a href="#"><img src="photo-3.jpg" /></a></li>
+  </ul>
+
+  <ul class="gallery3">
+    <li><a href="#"><img src="photo-1.jpg" /></a></li>
+    <li><a href="#"><img src="photo-2.jpg" /></a></li>
+    <li><a href="#"><img src="photo-3.jpg" /></a></li>
+  </ul>
+
+  <div class="form_block">
+    <form action="/" id="thing-alerts">
+      <fieldset>
+        <label for="alerts-name">Your Name</label>
+        <input type="text" id="alerts-name" />
+      </fieldset>
+      <fieldset>
+        <label for="alerts-email">Your Email</label>
+        <input type="text" id="alerts-email" />
+      </fieldset>
+      <fieldset>
+        <input type="submit" value="Subscribe" />
+      </fieldset>
+    </form>
+  </div>
 </body>
 </html>
